# ixtract

./: .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.test.yml  phase0_report.py  pyproject.toml  run_tests.sh  test_cloudsqlserver.py
data/: events_chunk_001.parquet  events_chunk_002.parquet  events_chunk_003.parquet  events_chunk_004.parquet  events_chunk_005.parquet  events_chunk_006.parquet  events_chunk_007.parquet  events_chunk_008.parquet  events_chunk_009.parquet  events_chunk_010.parquet  orders_chunk_005.parquet  orders_chunk_006.parquet  orders_chunk_007.parquet  orders_chunk_008.parquet  orders_chunk_009.parquet  orders_chunk_010.parquet  orders_chunk_011.parquet  orders_chunk_012.parquet  orders_chunk_013.parquet  orders_chunk_014.parquet
src/ixtract/: __init__.py  _replay.py  api.py
src/ixtract/benchmarker/: __init__.py
src/ixtract/cli/: __init__.py  cli_main.py  main.py
src/ixtract/config/: __init__.py
src/ixtract/connectors/: __init__.py  base.py  mysql.py  postgresql.py  sqlserver.py
src/ixtract/context/: __init__.py  estimator.py  runtime.py  similarity.py
src/ixtract/controller/: __init__.py  __init___old.py
src/ixtract/cost/: __init__.py
src/ixtract/diagnosis/: __init__.py
src/ixtract/engine/: __init__.py
src/ixtract/intent/: __init__.py
src/ixtract/introspection/: __init__.py
src/ixtract/manifest/: __init__.py
src/ixtract/planner/: __init__.py  planner.py
src/ixtract/profiler/: __init__.py
src/ixtract/simulation/: __init__.py
src/ixtract/state/: __init__.py
src/ixtract/writers/: __init__.py  csv_writer.py  gcs_writer.py  parquet.py  rotating.py  s3_writer.py
tests/integration/: __init__.py  seed_db.py  test_pipeline.py
tests/simulation/: test_adaptive.py  test_benchmarker.py  test_context.py  test_csv_writer.py  test_drift.py  test_hardening.py  test_item6.py  test_manifest.py  test_mysql_connector.py  test_phase0.py  test_phase3c.py  test_phase4a.py  test_phase4b.py  test_runtime_context.py  test_work_stealing.py
